--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "url": "https://github.com/asasvirtuais/airtable/issues"
   },
   "dependencies": {
-    "wretch": "^2.11.0",
-    "@asasvirtuais/crud": "github:asasvirtuais/crud#main"
+    "wretch": "^2.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "@asasvirtuais/crud": "github:asasvirtuais/crud#main"
   },
   "engines": {
     "node": ">=16"
